--- a/src/style.css
+++ b/src/style.css
@@ -25,7 +25,7 @@
   font-family: 'Trajan Pro Regular';
   font-style: normal;
   font-weight: normal;
-  src: url('/fonts/TrajanPro-Regular.woff') format('woff');
+  src: url('fonts/TrajanPro-Regular.woff') format('woff');
   }
   
 
@@ -33,7 +33,7 @@
   font-family: 'Trajan Pro Bold';
   font-style: normal;
   font-weight: bold;
-  src: url('/fonts/TrajanPro-Bold.woff') format('woff');
+  src: url('fonts/TrajanPro-Bold.woff') format('woff');
   }
 
 iframe {
